<resources>
    <string name="app_name">ContactApplication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email_hint">yeshualac@gmail.com</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="byRegisteringYouAgree">By registering, you agree to </string>
    <string name="termsOfService">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="or">or</string>
    <string name="notAmember">Not a Member?</string>
    <string name="personalDetails">Personal Details</string>
    <string name="fullName">Full Name</string>
    <string name="contactNumber">Contact Number</string>
    <string name="address">Address</string>
    <string name="emailAddress">Email Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyAmember">Already a Member?</string>
    <string name="accountDetails">Account Details</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_name">No Name</string>
    <string name="no_phone">No phone number</string>
    <string name="no_email">No email</string>
    <string name="no_address">No address</string>
    <string name="no_company">No company</string>
    <string name="call_permission">Please, give permission to make call in your phone settings!</string>
    <string name="sms_permission">Please, give permission to send sms in your phone settings!</string>
    <string name="no_contact">You have no contacts in your Google account!</string>
    <string name="phone">Phone number:</string>
    <string name="emailAddresswith">Email address:</string>
    <string name="addresswith">Address:</string>
    <string name="company">Company:</string>
    <string name="all_contacts">All contacts</string>
    <string name="favorite_contacts">Favorite</string>
    <string name="choosen_contact">Choosen contact</string>
    <string name="importT">Import</string>
    <string name="add_successfull">Contact is succesfull imported</string>
    <string name="error">Error! Please try again!</string>
    <string name="no_contact_af">You have no contacts!</string>
    <string name="no_contact_cf">You have no favorite contacts!</string>
    <string name="contact_details">Contact details</string>
    <string name="edit">Edit contact</string>
    <string name="delete">Delete contact</string>
    <string name="save">Save changes</string>
    <string name="edited_successfully">Contact is sucessfully edited</string>
    <string name="deleted_successfully">Contact is sucessfully deleted</string>
    <string name="new_name">Contact name</string>
    <string name="new_number">Contact number</string>
    <string name="new_email">Contact email</string>
    <string name="new_address">Contact address</string>
    <string name="new_company">Contact company</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="create">Create</string>
    <string name="add_photo">Add photo</string>
    <string name="new_contact">Create new contact</string>
    <string name="city">City</string>
    <string name="city_reminder">City reminder</string>
    <string name="no_city_contact">You have no contacts in this city</string>
    <string name="tinder">Tinder</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="delete_">Miss</string>
    <string name="arc_successfull">Contact is succesfull archived</string>
    <string name="archive">Archived</string>
    <string name="backed_succ">Contact is successfull restored</string>
    <string name="select">Where to get your contacts?</string>
    <string name="google">Google</string>
    <string name="phone_">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="favorites">Favorites</string>
    <string name="contacts">Contacts</string>
    <string name="all_imported">All contacts have already been imported</string>
    <string name="no_arc_contact">You have no contacts in archive</string>










</resources>
