<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.acitivities.addContact.AddContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:subtitleTextColor="@color/colorWhite"
                app:titleTextColor="@color/colorWhite">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/new_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="65dp"
                        android:text="@string/create"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:textSize="24dp"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image_new"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_add_black_24dp"
                app:civ_border_color="@color/colorText"
                app:civ_border_width="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/textView_add_photo_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textColor="@color/colorText"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_name_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/fullName"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorText"
                    android:hint="@string/new_name"
                    android:textColorHint="@color/colorText"
                    android:ems="10"
                    android:textAlignment="textStart"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_numb_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_phone_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorText"
                    android:hint="@string/new_number"
                    android:textColorHint="@color/colorText"
                    android:ems="10"
                    android:textAlignment="textStart"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar_new"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textView_email_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/emailAddresswith"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorText"
                    android:hint="@string/new_email"
                    android:textColorHint="@color/colorText"
                    android:ems="10"
                    android:textAlignment="textStart"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_address_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/addresswith"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_address_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorText"
                    android:hint="@string/new_address"
                    android:textColorHint="@color/colorText"
                    android:ems="10"
                    android:textAlignment="textStart"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_comany_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/company"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_company_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorText"
                    android:hint="@string/new_company"
                    android:textColorHint="@color/colorText"
                    android:ems="10"
                    android:textAlignment="textStart"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_is_fav_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorite"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:checked="false"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                />

            <Button
                android:id="@+id/button_new_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:background="@drawable/roundrect"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>