<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.register.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_contact_mail_black_24dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/signUp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/personalDetails"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_person_black_24dp" />

                <EditText
                    android:id="@+id/et_full_name_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/fullName"
                    android:inputType="textPersonName"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_phone_black_24dp" />

                <EditText
                    android:id="@+id/et_contact_number_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/contactNumber"
                    android:inputType="phone"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_home_black_24dp" />

                <EditText
                    android:id="@+id/et_adress_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/address"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/accountDetails"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_mail_black_24dp" />

                <EditText
                    android:id="@+id/et_email_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/emailAddress"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/et_password_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_check_circle_black_24dp" />

                <EditText
                    android:id="@+id/et_confirm_password_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    tools:ignore="RtlCompat" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_signup_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/roundrect"
                android:text="@string/signUp"
                android:textAllCaps="true"
                android:textColor="@color/colorBlue"
                android:textSize="18dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:text="@string/byRegisteringYouAgree"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_terms_of_service_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:lineSpacingExtra="30sp"
                    android:linksClickable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/termsOfService"

                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlue"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:text="@string/and"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_privacy_policy_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:lineSpacingExtra="30sp"
                    android:linksClickable="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/privacyPolicy"

                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlue"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:background="@color/colorBlue">

                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.55"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:background="@color/colorBlue">

                </LinearLayout>
            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView77"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:text="@string/alreadyAmember"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlue"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/tv_signin_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/signIn"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlue"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>